k8s/client-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      name: client-app
      labels:
        component: web
    spec:
      containers:
        - name: client-app
          image: pushsign/hasd-webapp
          ports:
            - containerPort: 80
