k8s/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      name: postgresdb
      labels:
        component: database
    spec:
      containers:
        - name: postgresdb
          image: pushsign/hasd-db
          ports:
            - containerPort: 5432
