k8s/graphql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: graphql
  template:
    metadata:
      name: graphql
      labels:
        component: graphql
    spec:
      containers:
        - name: hasura-graphql
          image: hasura/graphql-engine
          ports:
            - containerPort: 8080
