k8s/client-app-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: client-app-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80
      targetPort: 80
