k8s/database-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: database-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: database
  ports:
    - port: 5432
      targetPort: 5432
