k8s/graphql-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: graphql-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: graphql
  ports:
    - port: 8080
      targetPort: 8080
